--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.css
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.css
@@ -82,12 +82,12 @@ div {
 }
 
     .gomb:hover {
-        background-color: darkgrey;
+        background-color: darkgrey !important;
         color: white;
     }
 
 .kattintható:hover {
-    background-color: darkgrey;
+    background-color: darkgrey !important; 
     color: white;
     cursor:pointer;
 }
@@ -96,16 +96,6 @@ div {
     padding: 10px;
     border-radius: 40px;
     background-color: dimgrey;
-}
-
-.jó {
-    background-color: forestgreen;
-    color: white;
-}
-
-.rossz {
-    background-color: red;
-    color: white;
 }
 
 @media screen and (min-width: 800px) {
